syntax = "proto3";

import "messages/common.proto";
import "messages/whsegrpc_getproducts.proto";

option csharp_namespace = "Adnc.Demo.Shared.Rpc.Grpc.Services";

package services;

service  WhseGrpc {
  rpc GetProducts(messages.ProductSearchRequest) returns (messages.GrpcResponse);
}
